--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>AC/DC</h1> 
         <h1>Жанры:хард-рокблюз-рок,рок-н-ролл.Основана в 1973</h1>
         <p>AC/DC — австралийская рок-группа, сформированная в Сиднее в ноябре 1973 года выходцами из Шотландии, братьями Малькольмом и Ангусом Янгами.</p>
-        <img src="https://i.paste.pics/ff422bbfa010e21b78434f0561405dc8.png" width="900" height="400" alt="AC/DC imagine">
+        <img src="./pictures/rabstol_net_acdc_10.jpg" width="900" height="600" alt="AC/DC imagine">
         <p>
         Наряду с такими группами, как Led Zeppelin, Deep Purple, Queen, Iron Maiden, Scorpions, Black Sabbath, Uriah Heep, Judas Priest и Motörhead, AC/DC часто рассматриваются как пионеры хард-рока и хеви-метала. Сами же музыканты классифицировали свою музыку как рок-н-ролл, поскольку в её основе лежит ритм-н-блюз с сильно искажённым звучанием ритмической и соло-гитар.
 
